# skills

./: .gitignore  .gitmodules  LICENSE  README.md  install.bat  install.sh  link_skills.py  pyproject.toml  update_skills.bat  update_skills.sh
agent-md-expert/: SKILL.md
agent-md-expert/references/: caching-and-positioning.md  minimization-and-redundancy.md  monorepo-spine-leaf.md
agent-md-expert/samples/: leaf-agents.md  spine-agents.md
agent-md-expert/scripts/: validate_agent_md.py
android-amplitude-sdk-expert/: SKILL.md
android-amplitude-sdk-expert/assets/: AmplitudeInitializer.kt  (+1 more)
android-leak-expert/: SKILL.md
android-startup-optimizer/: SKILL.md
android-strictmode-expert/: SKILL.md
ci-cd-expert/: SKILL.md
compose-component-expert/: SKILL.md
compose-m3-theme-expert/: SKILL.md
compose-shader-expert/: SKILL.md
composition-over-inheritance-expert/: SKILL.md
context-collector/: SKILL.md
dagger-hilt-expert/: README.md  SKILL.md
design-md-expert/: SKILL.md
detekt-rule-expert/: SKILL.md
gradle-convention-expert/: SKILL.md
gradle-task-expert/: SKILL.md
jetpack-compose-m3-theme-expert/: SKILL.md
koin-expert/: SKILL.md
kotlin-coroutine-expert/: SKILL.md
kotlin-k2-expert/: SKILL.md
ksp-expert/: SKILL.md
ktor-expert/: SKILL.md
medium-article-expert/: SKILL.md
offline-first-expert/: SKILL.md
optimize-prompt/: SKILL.md
python-expert/: SKILL.md
read-me-creator/: SKILL.md
rules/: code-structure-patterns.md  readable-code-principles.md
shell-mastery/: SKILL.md
solid-expert/: SKILL.md
subagent-expert/: SKILL.md
(+214 files in other folders)
